--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Projeto</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Contador de Cliques</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Olá Mundo!</h1>
-    <p>Bem-vindo ao meu primeiro projeto de GitHub Pages.</p>
+  <h1>Contador de Cliques</h1>
+  <p id="contador">0</p>
+  <button onclick="incrementar()">Clique aqui!</button>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
